[project]
name = "gardening_tools"
version = "0.0.3"
authors = [
  { name="Sebastian Llambias", email="llambias@live.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
keywords = ['gardening tools', 'plant care','garden management']

dependencies = [
    "torch>=2.6.0",
    "numpy>=2.2.5",
    "nibabel>=5.3.2",

]

[tool.setuptools.packages.find]
include = ["gardening_tools*"]

[project.urls]
"Homepage" = "https://github.com/sllambias/gardening_tools"

[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127

